Mise en place correcte du vertical-align
Reste à faire que tous le block soit cliquable

--- a/style.css
+++ b/style.css
@@ -1,39 +1,57 @@
 /* La page id-libre.org : l'accueil  */
 
 html, body, article, ul, li {
-				margin: 0px;
-				padding: 0px;
+	margin: 0px;
+	padding: 0px;
 }
 
 body {
-				width: 100%;
+	width: 100%;
 }
 
 #accueil {
-				max-width: 66%;
-				margin: 0px auto;
+	width: 66%;
+	max-width: 900px;
+	margin: 1% auto;
+	font-size: 175%;
+	-moz-hyphens: auto;
 }
 
+#main {
+	list-style: none outside none;
+	margin: 0px auto;
+	padding: 1%;
+}
+
+
 .entree {
-				display: inline;
-				width: 8em;
-				height: 8em;
-				text-align: center;
-				background-color: rgba(34, 34, 34, .8);
-				color: rgba(231, 231, 231, .7);
-				border-radius: 3px;
-				margin: 2%;
+	display: inline-block;
+	margin: .5%;
 }
 
 .wraptocenter {
-				display: table-cell;
-				vertical-align: middle;
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+	background-color: rgba(34, 34, 34, .8);
+	color: rgba(231, 231, 231, .7);
+	border-radius: 7px;
+	width: 7em;
+	height: 7em;
+
 }
 
 .wraptocenter a {
-				text-decoration: none;
-				vertical-align: middle;
+	text-decoration: none;
+	vertical-align: middle;
+	padding: .5em;
+	color: rgba(231, 231, 231, .7);
 }
+
+.wraptocenter a:hover {
+
+}
+
 
 
 /* #accueil {
@@ -68,26 +86,26 @@ border-radius: 3px;
 }
 
 @media (max-width: 1000px) {
-				.entree {
-								width: 25%;
-								padding-bottom: 25%;
-				}
+	.entree {
+		width: 25%;
+		padding-bottom: 25%;
+	}
 }
 
 .entree:hover  {
-				text-decoration: none;
-				color: rgba(231, 231, 231, 1);
-				background-color: rgba(34, 34, 34, .5);
+	text-decoration: none;
+	color: rgba(231, 231, 231, 1);
+	background-color: rgba(34, 34, 34, .5);
 }
 
 .entree a {
-				display: block;
-				width: 100%;
-				height: 100%;
-				color: rgba(231, 231, 231, .7);
+	display: block;
+	width: 100%;
+	height: 100%;
+	color: rgba(231, 231, 231, .7);
 }
 
 .entree:hover a {
-				text-decoration: none;
+	text-decoration: none;
 }
-	*/
+ */
